format lai giatien

--- a/views/client/donghonu/donghonu.ejs
+++ b/views/client/donghonu/donghonu.ejs
@@ -85,7 +85,7 @@
                                                                             <h4><a href="/chitietsp?id=<%= sp.masp %>"><%= sp.tensp %></a></h4>
                                                                             <div class="product-price">
                                                                                 <ul>
-                                                                                    <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(sp.giatien).split('₫')[1] + " VND" %></li>
+                                                                                    <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(sp.giatien) %></li>
                                                                                 </ul>
                                                                             </div>
                                                                         </div>
