--- a/views/client/khuyenmai/khuyenmai.ejs
+++ b/views/client/khuyenmai/khuyenmai.ejs
@@ -53,7 +53,7 @@
                                                             <h4><a href="/chitietsp?id=<%= indexss[i].masp %>"><%= indexss[i].tensp %></a></h4>
                                                             <div class="product-price">
                                                                 <ul>
-                                                                    <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexss[i].giatien).split('₫')[1] + " VND" %></li>
+                                                                    <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexss[i].giatien)%></li>
                                                                     <li class="old-price">$33.00</li>
                                                                 </ul>
                                                             </div>
@@ -78,7 +78,7 @@
                                                             <h4><a href="/chitietsp?id=<%= indexss[i+1].masp %>"><%= indexss[i+1].tensp %></a></h4>
                                                             <div class="product-price">
                                                                 <ul>
-                                                                    <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexss[i+1].giatien).split('₫')[1] + " VND" %></li>
+                                                                    <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexss[i+1].giatien)%></li>
                                                                     <li class="old-price">$33.00</li>
                                                                 </ul>
                                                             </div>
@@ -103,7 +103,7 @@
                                                             <h4><a href="/chitietsp?id=<%= indexss[i+2].masp %>"><%= indexss[i+2].tensp %></a></h4>
                                                             <div class="product-price">
                                                                 <ul>
-                                                                    <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexss[i+2].giatien).split('₫')[1] + " VND" %></li>
+                                                                    <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexss[i+2].giatien)%></li>
                                                                     <li class="old-price">$33.00</li>
                                                                 </ul>
                                                             </div>
@@ -139,7 +139,7 @@
                                                         <h4><a href="/chitietsp?id=<%= indexbc[i].masp %>"><%= indexbc[i].tensp %></a></h4>
                                                         <div class="product-price">
                                                             <ul>
-                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexbc[i].giatien).split('₫')[1] + " VND" %></li>
+                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexbc[i].giatien)%></li>
                                                                 <li class="old-price">$33.00</li>
                                                             </ul>
                                                         </div>
@@ -164,7 +164,7 @@
                                                         <h4><a href="/chitietsp?id=<%= indexbc[i+1].masp %>"><%= indexbc[i+1].tensp %></a></h4>
                                                         <div class="product-price">
                                                             <ul>
-                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexbc[i+1].giatien).split('₫')[1] + " VND" %></li>
+                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexbc[i+1].giatien)%></li>
                                                                 <li class="old-price">$33.00</li>
                                                             </ul>
                                                         </div>
@@ -189,7 +189,7 @@
                                                         <h4><a href="/chitietsp?id=<%= indexbc[i+2].masp %>"><%= indexbc[i+2].tensp %></a></h4>
                                                         <div class="product-price">
                                                             <ul>
-                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexbc[i+2].giatien).split('₫')[1] + " VND" %></li>
+                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexbc[i+2].giatien) %></li>
                                                                 <li class="old-price">$33.00</li>
                                                             </ul>
                                                         </div>
@@ -225,7 +225,7 @@
                                                         <h4><a href="/chitietsp?id=<%= indexhd[i].masp %>"><%= indexhd[i].tensp %></a></h4>
                                                         <div class="product-price">
                                                             <ul>
-                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexhd[i].giatien).split('₫')[1] + " VND" %></li>
+                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexhd[i].giatien)%></li>
                                                                 <li class="old-price">$33.00</li>
                                                             </ul>
                                                         </div>
@@ -250,7 +250,7 @@
                                                         <h4><a href="/chitietsp?id=<%= indexhd[i+1].masp %>"><%= indexhd[i+1].tensp %></a></h4>
                                                         <div class="product-price">
                                                             <ul>
-                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexhd[i+1].giatien).split('₫')[1] + " VND" %></li>
+                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexhd[i+1].giatien) %></li>
                                                                 <li class="old-price">$33.00</li>
                                                             </ul>
                                                         </div>
@@ -275,7 +275,7 @@
                                                         <h4><a href="/chitietsp?id=<%= indexhd[i+2].masp %>"><%= indexhd[i+2].tensp %></a></h4>
                                                         <div class="product-price">
                                                             <ul>
-                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexhd[i+2].giatien).split('₫')[1] + " VND" %></li>
+                                                                <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexhd[i+2].giatien)%></li>
                                                                 <li class="old-price">$33.00</li>
                                                             </ul>
                                                         </div>
