--- a/views/client/partials/menuleft.ejs
+++ b/views/client/partials/menuleft.ejs
@@ -36,8 +36,8 @@
                                 <h4><a href="/chitietsp?id=<%= sp.masp %>"><%= sp.tensp %></a></h4>
                                 <div class="product-price">
                                     <ul>
-                                        <li>
-                                            <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(sp.giatien).split('₫')[1] + " VND" %>
+                                        <li><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(sp.giatien)%>
+                                            
                                         </li>
                                         <li class="old-price">70000</li>
                                     </ul>
