--- a/views/client/thuonghieu/thuonghieu.ejs
+++ b/views/client/thuonghieu/thuonghieu.ejs
@@ -122,7 +122,7 @@
                                                                                 <div class="product-price">
                                                                                     <ul>
                                                                                         <li>
-                                                                                            <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexSP[i].giatien).split('₫')[1] + " VND" %>
+                                                                                            <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(indexSP[i].giatien)%>
                                                                                         </li>
                                                                                     </ul>
                                                                                 </div>
