--- a/views/client/canhan/doimatkhau.ejs
+++ b/views/client/canhan/doimatkhau.ejs
@@ -23,14 +23,14 @@
                                 <div class="billing-fields mb-30">
                                     <form id="formChangePass" method="POST" action="/canhan/doimatkhauPost" >
                                         <label>Mật khẩu cũ</label>
-                                        <input type="text" class="form-control" name="mkcu" placeholder="Mật khẩu cũ"><br>
+                                        <input type="password" class="form-control" name="mkcu" placeholder="Mật khẩu cũ"><br>
                                         <label>Mật khẩu mới</label>
-                                        <input type="text" id="oldpass" class="form-control" name="mkmoi" placeholder="Mật khẩu mới"><br>
+                                        <input type="password" id="oldpass" class="form-control" name="mkmoi" placeholder="Mật khẩu mới"><br>
                                         <label>Xác nhận mật khẩu</label>
-                                        <input type="text" class="form-control" name="xacnhanmk"><br>
+                                        <input type="password" class="form-control" name="xacnhanmk"><br>
                                         <input type="submit" name="xacnhan" value="Xác nhận" class="btn btn-primary"><br/>
                                         <br/>
-                                        <a href="canhan">Quay lại?</a>
+                                        <a href="/canhan?idkh=<%= idkh %>">Quay lại?</a>
                                     </form>
                                 </div>
                             </div>
