--- a/views/admin/adsanpham/sanpham.ejs
+++ b/views/admin/adsanpham/sanpham.ejs
@@ -87,7 +87,7 @@
   <script>
     let mess = '<%= mess %>';
     if (mess && mess == 1) {
-      alert('sản phẩm có trong đơn hàng');
+      alert('Không thể xóa! Sản phẩm có trong đơn hàng');
     }
   </script>
   <script>
