--- a/views/client/dangky/dangky.ejs
+++ b/views/client/dangky/dangky.ejs
@@ -32,13 +32,13 @@
                                         <div class="row">
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                 <p>Địa chỉ email<span>*</span></p>
-                                                <input class="register-emailaddress-phone" type="text" id="email"
+                                                <input class="register-emailaddress-phone" type="email" id="email"
                                                     name="email" /><br><br>
                                                 <span id="messemail" style="color: red; font-weight: bold;" ></span>
                                             </div>
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                 <p>Số điện thoại<span>*</span></p>
-                                                <input class="register-emailaddress-phone" type="text" id="phone"
+                                                <input class="register-emailaddress-phone" type="number" id="phone"
                                                     name="phone" /><br><br>
                                                 <span id="messphone" style="color: red; font-weight: bold;"></span>
                                             </div>
