--- a/views/client/donghonu/donghonu.ejs
+++ b/views/client/donghonu/donghonu.ejs
@@ -45,7 +45,7 @@
                                                     <!-- tab-area-start -->
                                                     <div class="tab-content">
                                                         <div class="tab-pane active" id="th">
-                                                            <div class="row">
+                                                            <div class="row clock-woman-contain">
                                                                 <% indexnu.forEach(function(sp){ %>
                                                                 <div class="col-lg-3 col-md-4 col-sm-6">
                                                                     <!-- single-product-start -->
@@ -53,7 +53,7 @@
                                                                         <div class="product-imgnamnu">
                                                                             <a href="/chitietsp?id=<%= sp.masp %>">
                                                                                 <img src="client/img/product/<%= sp.hinhanh %>" alt="book"
-                                                                                    class="primary"/>
+                                                                                    class="primary" style="width:140px; height:180px"/>
                                                                             </a>
                                                                             <div class="quick-view">
                                                                                 <a class="action-view" href="#"
@@ -94,14 +94,6 @@
                                                                                 <a href="/giohang?id=<%= sp.masp %>" title="Add to cart"><i
                                                                                         class="fa fa-shopping-cart"></i>Thêm giỏ hàng</a>
                                                                             </div>
-                                                                            <div class="add-to-link">
-                                                                                <ul>
-                                                                                    <li><a href="product-details.html"
-                                                                                            title="Details"><i
-                                                                                                class="fa fa-external-link"></i></a>
-                                                                                    </li>
-                                                                                </ul>
-                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                                     <!-- single-product-end -->
@@ -111,6 +103,27 @@
                                                         </div>
                                                     </div>
                                                     <!-- tab-area-end -->
+                                                    <div style="display: flex; justify-content: center;">
+                                                        <nav aria-label="Page navigation example">
+                                                            <ul class="pagination">
+                                                              <li class="page-item">
+                                                                <a class="page-link" href="#" aria-label="Previous">
+                                                                  <span aria-hidden="true">&laquo;</span>
+                                                                  <span class="sr-only">Previous</span>
+                                                                </a>
+                                                              </li>
+                                                              <% for(let i=1; i<= pageNumber; i++) {%>
+                                                                    <li class="page-item"><a class="page-link" href="/donghonu?page=<%= i %>"><%= i%></a></li>
+                                                              <% } %>
+                                                              <li class="page-item">
+                                                                <a class="page-link" href="#" aria-label="Next">
+                                                                  <span aria-hidden="true">&raquo;</span>
+                                                                  <span class="sr-only">Next</span>
+                                                                </a>
+                                                              </li>
+                                                            </ul>
+                                                          </nav>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
