--- a/views/client/donhang/donhang.ejs
+++ b/views/client/donhang/donhang.ejs
@@ -28,7 +28,7 @@
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <div class="checkout-form-list">
                                                     <label>Số điện thoại <span class="required">*</span></label>
-                                                    <input type="text" placeholder="0898xxxxxx" id="phone" name="phone">
+                                                    <input type="number" placeholder="0898xxxxxx" id="phone" name="phone">
                                                     <span id="messphone" style="color: red;"></span>
                                                 </div>
                                             </div>
@@ -42,7 +42,7 @@
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <div class="checkout-form-list">
                                                     <label>Email <span class="required">*</span></label>
-                                                    <input type="text" id="email" name="email">
+                                                    <input type="email" id="email" name="email">
                                                     <span id="messemail" style="color: red;"></span>
                                                 </div>
 
