--- a/views/client/khuyenmai/khuyenmai.ejs
+++ b/views/client/khuyenmai/khuyenmai.ejs
@@ -6,7 +6,7 @@
         <div class="app">
             <%- include ('../partials/header'); -%>
                 <!-- banner-static-area-start -->
-                <div class="banner-static-area bg ptb-100">
+                <div class="banner-static-area bg ptb-100" style="padding-bottom: 0px; padding-top: 50px">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -25,7 +25,7 @@
                 <!-- banner-static-area-end -->
 
                 <!-- most-product-area-start -->
-                <div class="most-product-area pt-90 pb-100">
+                <div class="most-product-area pt-90 pb-100" style="padding-top: 0px;">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 xs-mb">
@@ -303,7 +303,7 @@
                 </div>
                 <!-- most-product-area-end -->
                 <!-- testimonial-area-start -->
-                <div class="testimonial-area ptb-100 bg">
+                <div class="testimonial-area ptb-100 bg" style="margin-bottom: 50px;">
                     <div class="container">
                         <div class="row">
                             <div class="testimonial-active owl-carousel">
