--- a/views/client/dangnhap/dangnhap.ejs
+++ b/views/client/dangnhap/dangnhap.ejs
@@ -50,6 +50,7 @@
                                                 </div>
                                             </div>
                                             <p>Chưa có tài khoản ? <a href="/dangky">Đăng ký</a></p>
+                                            <a href="/quenmatkhau/email">Bạn quên mật khẩu ?</a>
                                         </div>
                                     </div>
                                 </div>
